[tool.poetry]
name = "iql"
version = "0.1.0"
description = ""
authors = ["Benjamin Bugeja"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.4.0+cu124", source = "pytorch-gpu-src"}
torchvision = {version = "^0.19.0+cu124", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.4.0+cu124", source = "pytorch-gpu-src"}
numpy = "<2"
tensorboard = "^2.17.0"
lmdb = "^1.5.1"
flash-attn = {url = "https://github.com/bdashore3/flash-attention/releases/download/v2.7.1.post1/flash_attn-2.7.1.post1+cu124torch2.4.0cxx11abiFALSE-cp312-cp312-win_amd64.whl"}
wandb = "^0.20.1"
gym-microrts = {path = "../MicroRTS-Py", develop = true}


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"