[tool.poetry]
name = "iql"
version = "0.1.0"
description = ""
authors = ["Benjamin Bugeja"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2"
lmdb = "^1.5.1"
gym-microrts = {path = "../MicroRTS-Py", develop = true}
wandb = "^0.20.1"
torch = {version = "^2.7.1+cu128", source = "pytorch-gpu-src"}
torchvision = {version = "^0.22.1+cu128", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.7.1+cu128", source = "pytorch-gpu-src"}
triton-windows = "^3.3.1.post19"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"